--- a/eurekaServer-dev.yml
+++ b/eurekaServer-dev.yml
@@ -7,7 +7,7 @@ eureka:
     #是否将自己注册到注册中心上
     register-with-eureka: false
     service-url:
-      defaultZone: http://localhost:10000/eureka
+      defaultZone: http://localhost:10000/eureka/
   server:
     #当eureka启动时，不能从集群节点获取到instance注册信息，应该等多久
     wait-time-in-ms-when-sync-empty: 0
